docs/tests/parser/functions/valid/FuncExternLinkage.src
fn extern int externalFunc(int x);
