docs/tests/parser/functions/invalid/FuncDeclMissingSemi.src
fn int foo()
fn int bar();
